# ChangeLog for dev-python/celementtree
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/celementtree/ChangeLog,v 1.27 2009/10/10 12:29:26 grobian Exp $

  10 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  celementtree-1.0.5-r1.ebuild:
  Merge from Prefix

  05 Sep 2009; Patrick Lauer <patrick@gentoo.org>
  -celementtree-1.0.2.ebuild:
  Remove old

  31 May 2009; Brent Baude <ranger@gentoo.org> celementtree-1.0.5-r1.ebuild:
  Marking celementtree-1.0.5-r1 ppc64 for bug 221169

  25 May 2009; Raúl Porcel <armin76@gentoo.org>
  celementtree-1.0.5-r1.ebuild:
  alpha/ia64/x86 stable wrt #221169

  23 May 2009; Ferris McCormick <fmccor@gentoo.org>
  celementtree-1.0.5-r1.ebuild:
  Sparc stable, Bug #221169.

  23 May 2009; nixnut <nixnut@gentoo.org> celementtree-1.0.5-r1.ebuild:
  ppc stable #221169

  27 Dec 2007; Brent Baude <ranger@gentoo.org> celementtree-1.0.5-r1.ebuild:
  Marking  celementtree-1.0.5-r1 ~ppc64

  12 Aug 2007; Steve Dibb <beandog@gentoo.org> celementtree-1.0.2.ebuild,
  celementtree-1.0.5-r1.ebuild:
  amd64 stable

  05 Jul 2007; Rob Cakebread <pythonhead@gentoo.org>
  celementtree-1.0.5-r1.ebuild:
  Add setuptools depend

  05 Jul 2007; Rob Cakebread <pythonhead@gentoo.org>
  +files/celementtree-1.0.5-setuptools.patch, celementtree-1.0.5-r1.ebuild:
  Change setup.py to use setuptools setup

  03 Jul 2007; Ali Polatel <hawking@gentoo.org>
  -files/celementtree-1.0.2-use_system_expat.patch,
  +celementtree-1.0.2.ebuild, -celementtree-1.0.2-r1.ebuild:
  Reverted version 1.0.2, removed 1.0.2-r1

  03 Jul 2007; Ali Polatel <hawking@gentoo.org> -celementtree-1.0.ebuild,
  -celementtree-1.0.2.ebuild, -celementtree-1.0.5.ebuild:
  Drop old

*celementtree-1.0.5-r1 (03 Jul 2007)
*celementtree-1.0.2-r1 (03 Jul 2007)

  03 Jul 2007; Ali Polatel <hawking@gentoo.org>
  +files/celementtree-1.0.2-use_system_expat.patch,
  +files/celementtree-1.0.5-use_system_expat.patch,